--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gst_sdk_tutorials.tutorial_5"
+    package="com.robotfuzz.al.pirovera"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -17,8 +17,10 @@
         android:icon="@drawable/gst_sdk_icon"
         android:label="@string/app_name" >
         <activity
-            android:name=".Tutorial5"
-            android:label="@string/app_name" >
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:screenOrientation="landscape" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,69 +28,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <!-- Local files whose MIME type is known to Android -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data android:mimeType="audio/*" />
-                <data android:mimeType="video/*" />
-                <data android:mimeType="image/*" />
-            </intent-filter>
-
-            <!-- Local files with unknown MIME type.
-                 The list of extensions and supported protocols can certainly be extended. -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data android:scheme="file" />
-                <data android:mimeType="*/*" />
-                <data android:pathPattern=".*\\.avi" />
-                <data android:pathPattern=".*\\.AVI" />
-                <data android:pathPattern=".*\\.mkv" />
-                <data android:pathPattern=".*\\.MKV" />
-                <data android:pathPattern=".*\\.webm" />
-                <data android:pathPattern=".*\\.WEBM" />
-                <data android:pathPattern=".*\\.ogv" />
-                <data android:pathPattern=".*\\.OGV" />
-                <data android:pathPattern=".*\\.mp4" />
-                <data android:pathPattern=".*\\.MP4" />
-                <data android:pathPattern=".*\\.mov" />
-                <data android:pathPattern=".*\\.MOV" />
-            </intent-filter>
-
-            <!-- Remote files. These typically have unknown MIME type.
-                 The list of extensions and supported protocols can certainly be extended. -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data android:scheme="http" />
-                <data android:pathPattern=".*\\.avi" />
-                <data android:pathPattern=".*\\.AVI" />
-                <data android:pathPattern=".*\\.mkv" />
-                <data android:pathPattern=".*\\.MKV" />
-                <data android:pathPattern=".*\\.webm" />
-                <data android:pathPattern=".*\\.WEBM" />
-                <data android:pathPattern=".*\\.ogv" />
-                <data android:pathPattern=".*\\.OGV" />
-                <data android:pathPattern=".*\\.mp4" />
-                <data android:pathPattern=".*\\.MP4" />
-                <data android:pathPattern=".*\\.mov" />
-                <data android:pathPattern=".*\\.MOV" />
-            </intent-filter>
         </activity>
-        <activity
-            android:name="com.lamerman.FileDialog"
-            android:label="@string/filechooser_name" >
-        </activity>
+
     </application>
 
 </manifest>
