--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,8 +19,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:screenOrientation="landscape" >
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
