--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,11 +14,11 @@
     <uses-feature android:glEsVersion="0x00020000" />
 
     <application
-        android:icon="@drawable/gst_sdk_icon"
-        android:label="@string/app_name" >
+        android:icon="@drawable/pirover"
+        android:label="Pi Rover" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="Pi Rover"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
 
             <intent-filter>
